[workspace]
members = [
    "iterator_pattern",
    "filter_pattern",
    "prototype_pattern",
    "singleton_pattern",
    "builder_pattern",
    "strategy_pattern",
    "factory_pattern",
    "adapter_pattern",
    "template_method_pattern",
    "proxy_pattern",
    "decorator_pattern",
    "facade_pattern",
    "composite_pattern",
    "bridge_pattern",
    "flyweight_pattern",
    "command_pattern",
    "chain_of_responsibility_pattern",
    "observer_pattern",
    "mediator_pattern",
    "state_pattern",
    "memento_pattern",
    "interpreter_pattern",
    "visitor_pattern",
]
resolver = "2"
